Model re-factoring to use records where possible
Assisted-by: Claude Code (Sonnet 4.5) <noreply@anthropic.com>
Signed-off-by: Michael Edgar <medgar@redhat.com>
Co-authored-by: Claude Sonnet 4.5 <noreply@anthropic.com>